# simple-raytracer

./: CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  LightSource.cpp  LightSource.h  Matrix.h  Plane.cpp  Plane.h  README.md  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  main.cpp  myscene.ppm  myscene.txt
